--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <ul class="main-navigation">
               <li class="current"><a href="index.html" title="">Home</a></li>
               <li><a href="about.html" title="">About</a></li>
-              <li><a href="portfolio.html" title="">Portfolio</a></li>
+              <li><a href="./portfolio.html" title="">Portfolio</a></li>
               <li><a href="contact.html" title="">Contact</a></li>
             </ul>
           </nav>
@@ -62,274 +62,6 @@
     </header>
     <!-- /header -->
 
-    <!-- intro section
-   ================================================== -->
-    <section id="intro">
-      <div class="intro-overlay"></div>
-
-      <div class="intro-content">
-        <div class="row">
-          <div class="col-twelve">
-            <h5>Hello, World.</h5>
-            <h1>I'm Mutiat Adepoju.</h1>
-
-            <p class="intro-position">
-              <span
-                >Aspiring Web Developer | HTML/CSS | JavaScript |
-                Self-Motivated</span
-              >
-            </p>
-
-            <a class="button stroke smoothscroll" href="./about.html" title=""
-              >More About Me</a
-            >
-          </div>
-        </div>
-      </div>
-      <!-- /intro-content -->
-
-      <ul class="intro-social">
-        <li>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-        </li>
-      </ul>
-      <!-- /intro-social -->
-    </section>
-    <!-- /intro -->
-
-    <!-- about section
-   ================================================== -->
-    <section id="about">
-      <div class="row section-intro">
-        <div class="col-twelve">
-          <h5>About</h5>
-          <h1>Let me introduce myself.</h1>
-
-          <div class="intro-info">
-            <img src="images/profile-pic.jpg" alt="Profile Picture" />
-
-            <p class="lead">
-              Lorem ipsum Exercitation culpa qui dolor consequat exercitation
-              fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure
-              sunt id pariatur Duis laboris amet exercitation veniam labore
-              consectetur ea id quis eiusmod.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- /section-intro -->
-
-      <div class="row about-content">
-        <div class="col-six tab-full">
-          <h3>Profile</h3>
-          <p>
-            Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse
-            in magna sint minim officia consectetur nisi commodo ea magna
-            pariatur nisi cillum.
-          </p>
-
-          <ul class="info-list">
-            <li>
-              <strong>Fullname:</strong>
-              <span>Juan Dela Cruz</span>
-            </li>
-            <li>
-              <strong>Birth Date:</strong>
-              <span>September 28, 1987</span>
-            </li>
-            <li>
-              <strong>Job:</strong>
-              <span>Freelancer, Frontend Developer</span>
-            </li>
-            <li>
-              <strong>Website:</strong>
-              <span>www.kardswebsite.com</span>
-            </li>
-            <li>
-              <strong>Email:</strong>
-              <span>me@kardswebsite.com</span>
-            </li>
-          </ul>
-          <!-- /info-list -->
-        </div>
-
-        <div class="col-six tab-full">
-          <h3>Skills</h3>
-          <p>
-            Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse
-            in magna sint minim officia consectetur nisi commodo ea magna
-            pariatur nisi cillum.
-          </p>
-
-          <ul class="skill-bars">
-            <li>
-              <div class="progress percent90"><span>90%</span></div>
-              <strong>HTML5</strong>
-            </li>
-            <li>
-              <div class="progress percent85"><span>85%</span></div>
-              <strong>CSS3</strong>
-            </li>
-            <li>
-              <div class="progress percent70"><span>70%</span></div>
-              <strong>JQuery</strong>
-            </li>
-          </ul>
-          <!-- /skill-bars -->
-        </div>
-      </div>
-
-      <div class="row button-section">
-        <div class="col-twelve">
-          <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
-            >Hire Me</a
-          >
-          <a href="#" title="Download CV" class="button button-primary"
-            >Download CV</a
-          >
-        </div>
-      </div>
-    </section>
-    <!-- /process-->
-
-   <!-- contact
-   ================================================== -->
-    <section id="contact">
-      <div class="row section-intro">
-        <div class="col-twelve">
-          <h5>Contact</h5>
-          <h1>I'd Love To Hear From You.</h1>
-
-          <p class="lead">
-            I have passion for creating beautiful and functional websites. I'm
-            eager to learn and grow, and I'm always looking for new
-            opportunities to collaborate. If you have any questions about my
-            work or would like to discuss a potential project, please don't
-            hesitate to contact me. I look forward to hearing from you!
-          </p>
-        </div>
-      </div>
-      <!-- /section-intro -->
-
-      <div class="row contact-form">
-        <div class="col-twelve">
-          <!-- form -->
-          <form name="contactForm" id="contactForm" method="post" action="">
-            <fieldset>
-              <div class="form-field">
-                <input
-                  name="contactName"
-                  type="text"
-                  id="contactName"
-                  placeholder="Name"
-                  value=""
-                  minlength="2"
-                  required=""
-                />
-              </div>
-              <div class="form-field">
-                <input
-                  name="contactEmail"
-                  type="email"
-                  id="contactEmail"
-                  placeholder="Email"
-                  value=""
-                  required=""
-                />
-              </div>
-              <div class="form-field">
-                <input
-                  name="contactSubject"
-                  type="text"
-                  id="contactSubject"
-                  placeholder="Subject"
-                  value=""
-                />
-              </div>
-              <div class="form-field">
-                <textarea
-                  name="contactMessage"
-                  id="contactMessage"
-                  placeholder="message"
-                  rows="10"
-                  cols="50"
-                  required=""
-                ></textarea>
-              </div>
-              <div class="form-field">
-                <button class="submitform">Submit</button>
-                <div id="submit-loader">
-                  <div class="text-loader">Sending...</div>
-                  <div class="s-loader">
-                    <div class="bounce1"></div>
-                    <div class="bounce2"></div>
-                    <div class="bounce3"></div>
-                  </div>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-          <!-- Form End -->
-
-          <!-- contact-warning -->
-          <div id="message-warning"></div>
-          <!-- contact-success -->
-          <div id="message-success">
-            <i class="fa fa-check"></i>Your message was sent, thank you!<br />
-          </div>
-        </div>
-        <!-- /col-twelve -->
-      </div>
-      <!-- /contact-form -->
-
-      <div class="row contact-info">
-        <div class="col-four tab-full">
-          <div class="icon">
-            <i class="icon-pin"></i>
-          </div>
-
-          <h5>Where to find me</h5>
-
-          <p>
-            24, Soretire Street<br />
-            Ifako- Ijaiye, Ogba<br />
-            Lagos State, Nigeria.
-          </p>
-        </div>
-
-        <div class="col-four tab-full collapse">
-          <div class="icon">
-            <i class="icon-mail"></i>
-          </div>
-
-          <h5>Email Me At</h5>
-
-          <p>
-            mutiat900@gmail.com          
-          </p>
-        </div>
-
-        <div class="col-four tab-full">
-          <div class="icon">
-            <i class="icon-phone"></i>
-          </div>
-
-          <h5>Call Me At</h5>
-
-          <p>
-            Phone: (+234) 90-473-664-37<br />
-            Mobile: (+234) 70-366-437-47<br />
-            
-          </p>
-        </div>
-      </div>
-      <!-- /contact-info -->
-    </section>
-    <!-- /contact -->
-
     <!-- Portfolio Section
    ================================================== -->
     <section id="portfolio">
@@ -339,8 +71,10 @@
           <h1>Check Out Some of My Works.</h1>
 
           <p class="lead">
-            My portfolio includes a variety of projects, from landing page to profile card component.
-             I am proficient in HTML, CSS, Boostrap and,  little JavaScript. I am always up to date on the latest web development technologies.
+            My portfolio includes a variety of projects, from landing page to
+            profile card component. I am proficient in HTML, CSS, Boostrap and,
+            little JavaScript. I am always up to date on the latest web
+            development technologies.
           </p>
         </div>
       </div>
@@ -599,22 +333,29 @@
         <div class="col-six tab-full pull-right social">
           <ul class="footer-social">
             <li>
-              <a href="https://github.com/Rike12"><i class="fa fa-github"></i></a>
+              <a href="#"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href="https://www.twitter.com/mutiat900"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-behance"></i></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mutiat-adepoju-35b54a171"><i class="fa fa-linkedin"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-dribbble"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
             </li>
           </ul>
         </div>
 
         <div class="col-six tab-full">
           <div class="copyright">
-            <span>© HerTechTrail Cohort6 Capstone Project.</span>
+            <span>© Copyright Kards 2016.</span>
             <span
-              >Design by <a href="https://www.twitter.com/mutiat900">Mutiat</a></span
+              >Design by
+              <a href="http://www.styleshout.com/">styleshout</a></span
             >
           </div>
         </div>
