--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Kards</title>
+    <title>MDEV</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
