--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="/images/logo3.jpg" />
+    <link  class= "favicon" rel="icon" type="image/png" href="/images/logo3.jpg" />
   </head>
 
   <body id="top">
