--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="/images/logo3.jpg" />
+    <link rel="icon" type="image/png" href="/images/mlogo.jpg" />
   </head>
 
   <body id="top">
