--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="/images/mlogo.jpg" />
+    <link rel="icon" type="image/png" href="/images/mlogo.png" />
   </head>
 
   <body id="top">
@@ -72,7 +72,7 @@
           <h1>Let me introduce myself.</h1>
 
           <div class="intro-info">
-            <img src="images/Mutiat Adepoju.jpg" alt="Profile Picture" />
+            <img src="/images/Mutiat Adepoju.jpg" alt="Profile Picture" />
 
             <p class="lead">
             I have a passion for web development and I am eager to learn and grow in this field. I am proficient in HTML, CSS and, Boostrap. I am currently learning JavaScript, and I am also familiar with a number of other web development technologies.
