--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link  class= "favicon" rel="icon" type="image/png" href="/images/mlogo.jpg" />
+    <link  class= "favicon" rel="icon" type="image/png" href="/images/mlogo.png" />
   </head>
 
   <body id="top">
@@ -109,7 +109,7 @@
           <h1>Let me introduce myself.</h1>
 
           <div class="intro-info">
-            <img src="images/profile-pic.jpg" alt="Profile Picture" />
+            <img src="/images/mutiat" alt="Profile Picture" />
 
             <p class="lead">
               Lorem ipsum Exercitation culpa qui dolor consequat exercitation
