--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="icon" type="image/png" href="/images/mlogo.jpg" />
+    <link rel="icon" type="image/png" href="/images/mlogo.png" />
   </head>
 
   <body id="top">
@@ -73,8 +73,7 @@
           <p class="lead">
             My portfolio includes a variety of projects, from landing page to
             profile card component. I am proficient in HTML, CSS, Boostrap and,
-            little JavaScript. I am always up to date on the latest web
-            development technologies.
+            little JavaScript.
           </p>
         </div>
       </div>
@@ -86,12 +85,12 @@
           <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
             <div class="bgrid folio-item">
               <div class="item-wrap">
-                <img src="images/portfolio/liberty.jpg" alt="Liberty" />
+                <img src="/images/6-10.png" alt="profile card" />
                 <a href="#modal-01" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Liberty</h3>
-                      <span class="folio-types"> Graphic Design </span>
+                      <h3 class="folio-title">Profile Card Component</h3>
+                      <span class="folio-types"> Web Design </span>
                     </div>
                   </div>
                 </a>
@@ -101,11 +100,11 @@
 
             <div class="bgrid folio-item">
               <div class="item-wrap">
-                <img src="images/portfolio/shutterbug.jpg" alt="Shutterbug" />
+                <img src="/images/16-20.png" alt="Blogr Landing page" />
                 <a href="#modal-02" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Shutterbug</h3>
+                      <h3 class="folio-title">Blogr Landing Page</h3>
                       <span class="folio-types"> Web Design </span>
                     </div>
                   </div>
@@ -116,69 +115,42 @@
 
             <div class="bgrid folio-item">
               <div class="item-wrap">
-                <img src="images/portfolio/clouds.jpg" alt="Clouds" />
+                <img src="images/day1-5.png" alt="Clouds" />
                 <a href="#modal-03" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Clouds</h3>
+                      <h3 class="folio-title">Intro Component with sign up form</h3>
                       <span class="folio-types"> Web Design </span>
                     </div>
                   </div>
                 </a>
               </div>
             </div>
+          
             <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
+                        <div class="bgrid folio-item">
               <div class="item-wrap">
-                <img src="images/portfolio/beetle.jpg" alt="Beetle" />
+                <video class="w-100" autoplay loop muted>
+              <source src="images/funmi tribute.mp4" type="video/mp4" />
+               </video>
                 <a href="#modal-04" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Beetle</h3>
-                      <span class="folio-types"> Branding </span>
+                      <h3 class="folio-title">Tribute page</h3>
+                      <span class="folio-types"> Using Carousel </span>
                     </div>
                   </div>
                 </a>
               </div>
             </div>
-            <!-- /folio-item -->
 
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/lighthouse.jpg" alt="Lighthouse" />
-                <a href="#modal-05" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Lighthouse</h3>
-                      <span class="folio-types"> Web Development </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <!-- /folio-item -->
-
-            <div class="bgrid folio-item">
-              <div class="item-wrap">
-                <img src="images/portfolio/salad.jpg" alt="Salad" />
-                <a href="#modal-06" class="overlay">
-                  <div class="folio-item-table">
-                    <div class="folio-item-cell">
-                      <h3 class="folio-title">Salad</h3>
-                      <span class="folio-types"> Branding </span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
             <!-- /folio-item -->
 
             <!-- modal popups - begin
 	            ============================================================= -->
             <div id="modal-01" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+                <img src="images/portfolio/modals/6-10.png" alt="" />
               </div>
 
               <div class="description-box">
@@ -193,7 +165,7 @@
               </div>
 
               <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="https://day6-10.netlify.app">Details</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -201,7 +173,7 @@
 
             <div id="modal-02" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+                <img src="images/portfolio/modals/16-20.png" alt="" />
               </div>
 
               <div class="description-box">
@@ -216,7 +188,7 @@
               </div>
 
               <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="https://inquisitive-cheesecake-2ad1c9.netlify.app/">Details</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -224,7 +196,7 @@
 
             <div id="modal-03" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+                <img src="images/portfolio/modals/day1-5.png" alt="" />
               </div>
 
               <div class="description-box">
@@ -239,7 +211,7 @@
               </div>
 
               <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="https://day1-5.netlify.app/">Details</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -247,34 +219,11 @@
 
             <div id="modal-04" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+                <img src="images/portfolio/modals/funmi tribute.mp4" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Beetle</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-04 -->
-
-            <div id="modal-05" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Lighthouse</h4>
+                <h4>Tribute page</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -285,34 +234,12 @@
               </div>
 
               <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
+                <a href="https://glittering-valkyrie-c8a4d1.netlify.app/">Details</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-05 -->
+            <!-- /modal-04 -->
 
-            <div id="modal-06" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/m-salad.jpg" alt="" />
-              </div>
-
-              <div class="description-box">
-                <h4>Salad</h4>
-                <p>
-                  Proin gravida nibh vel velit auctor aliquet. Aenean
-                  sollicitudin, lorem quis bibendum auctor, nisi elit consequat
-                  ipsum, nec sagittis sem nibh id elit.
-                </p>
-
-                <div class="categories">Branding</div>
-              </div>
-
-              <div class="link-box">
-                <a href="http://www.behance.net">Details</a>
-                <a href="#" class="popup-modal-dismiss">Close</a>
-              </div>
-            </div>
-            <!-- /modal-06 -->
 
             <!-- modal popups - end
 	            ============================================================= -->
