--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               >
             </p>
 
-            <a class="button stroke smoothscroll" href="./about.html" title=""
+            <a class="button stroke smoothscroll" href="/about.html" title=""
               >More About Me</a
             >
           </div>
@@ -507,7 +507,7 @@
               </div>
             </div>
             <!-- /modal-04 -->
-            
+
             <!-- modal popups - end
 	            ============================================================= -->
           </div>
