--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 
     <!-- favicons
 	================================================== -->
-    <link  class= "favicon" rel="icon" type="image/png" href="/images/mlogo.png" />
+    <link
+      class="favicon"
+      rel="icon"
+      type="image/png"
+      href="/images/mlogo.png"
+    />
   </head>
 
   <body id="top">
@@ -80,7 +85,7 @@
               >
             </p>
 
-            <a class="button stroke smoothscroll" href="/about.html" title=""
+            <a class="button stroke" href="./about.html" title=""
               >More About Me</a
             >
           </div>
@@ -183,19 +188,15 @@
       </div>
 
       <div class="row button-section">
-        <div class="col-twelve">
-          <a href="#contact" title="Hire Me" class="button stroke smoothscroll"
+          <a href="./contact.html" title="Hire Me" class="button stroke"
             >Hire Me</a
           >
-          <a href="#" title="Download CV" class="button button-primary"
-            >Download CV</a
-          >
-        </div>
+ 
       </div>
     </section>
     <!-- /process-->
 
-   <!-- contact
+    <!-- contact
    ================================================== -->
     <section id="contact">
       <div class="row section-intro">
@@ -307,9 +308,7 @@
 
           <h5>Email Me At</h5>
 
-          <p>
-            mutiat900@gmail.com          
-          </p>
+          <p>mutiat900@gmail.com</p>
         </div>
 
         <div class="col-four tab-full">
@@ -322,7 +321,6 @@
           <p>
             Phone: (+234) 90-473-664-37<br />
             Mobile: (+234) 70-366-437-47<br />
-            
           </p>
         </div>
       </div>
@@ -330,7 +328,7 @@
     </section>
     <!-- /contact -->
 
-<!-- Portfolio Section
+    <!-- Portfolio Section
    ================================================== -->
     <section id="portfolio">
       <div class="row section-intro">
@@ -387,20 +385,22 @@
                 <a href="#modal-03" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">Intro Component with sign up form</h3>
+                      <h3 class="folio-title">
+                        Intro Component with sign up form
+                      </h3>
                       <span class="folio-types"> Web Design </span>
                     </div>
                   </div>
                 </a>
               </div>
             </div>
-          
+
             <!-- /folio-item -->
-                        <div class="bgrid folio-item">
+            <div class="bgrid folio-item">
               <div class="item-wrap">
                 <video class="w-100" autoplay loop muted>
-              <source src="images/funmi tribute.mp4" type="video/mp4" />
-               </video>
+                  <source src="images/funmi tribute.mp4" type="video/mp4" />
+                </video>
                 <a href="#modal-04" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
@@ -456,7 +456,9 @@
               </div>
 
               <div class="link-box">
-                <a href="https://inquisitive-cheesecake-2ad1c9.netlify.app/">Details</a>
+                <a href="https://inquisitive-cheesecake-2ad1c9.netlify.app/"
+                  >Details</a
+                >
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -502,7 +504,9 @@
               </div>
 
               <div class="link-box">
-                <a href="https://glittering-valkyrie-c8a4d1.netlify.app/">Details</a>
+                <a href="https://glittering-valkyrie-c8a4d1.netlify.app/"
+                  >Details</a
+                >
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -527,13 +531,19 @@
         <div class="col-six tab-full pull-right social">
           <ul class="footer-social">
             <li>
-              <a href="https://github.com/Rike12"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/Rike12"
+                ><i class="fa fa-github"></i
+              ></a>
             </li>
             <li>
-              <a href="https://www.twitter.com/mutiat900"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.twitter.com/mutiat900"
+                ><i class="fa fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mutiat-adepoju-35b54a171"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/mutiat-adepoju-35b54a171"
+                ><i class="fa fa-linkedin"></i
+              ></a>
             </li>
           </ul>
         </div>
@@ -542,7 +552,8 @@
           <div class="copyright">
             <span>© HerTechTrail Cohort6 Capstone Project.</span>
             <span
-              >Design by <a href="https://www.twitter.com/mutiat900">Mutiat</a></span
+              >Design by
+              <a href="https://www.twitter.com/mutiat900">Mutiat</a></span
             >
           </div>
         </div>
