--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,8 @@
           </p>
         </div>
       </div>
-      <!-- /section-intro-->
 
+      <!-- /section-intro-->
       <div class="row portfolio-content">
         <div class="col-twelve">
           <!-- portfolio-wrapper -->
@@ -184,13 +184,15 @@
 
             <!-- modal popups - begin
 	            ============================================================= -->
+
+                         <!-- /modal-01 --> 
             <div id="modal-01" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/netflixx.png" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Liberty</h4>
+                <h4>Netflix Landing Page</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -201,19 +203,19 @@
               </div>
 
               <div class="link-box">
-                <a href="https://astonishing-bunny-a589a9.netlify.app">Details</a>
+                <a href="https://astonishing-bunny-a589a9.netlify.app/">Details</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-01 -->
 
+                                  <!-- /modal-02 -->
             <div id="modal-02" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/6-10.png" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Shutterbug</h4>
+                <h4>Profile card component</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -228,15 +230,15 @@
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-02 -->
 
+                                  <!-- /modal-03 -->
             <div id="modal-03" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/microsoft1.png" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Clouds</h4>
+                <h4>Microsoft Landing Page</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -251,15 +253,15 @@
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-03 -->
 
+                      <!-- /modal-04 -->
             <div id="modal-04" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/day1-5.png" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Tribute page</h4>
+                <h4>Intro component with Sign Up</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -274,15 +276,15 @@
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-04 -->
-
+           
+                       <!-- /modal-05 -->
             <div id="modal-05" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/16-20.png" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>Clouds</h4>
+                <h4>Blogr Landing page</h4>
                 <p>
                   Proin gravida nibh vel velit auctor aliquet. Aenean
                   sollicitudin, lorem quis bibendum auctor, nisi elit consequat
@@ -297,8 +299,8 @@
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-05 -->
-
+            
+                                <!-- /modal-06 -->
             <div id="modal-06" class="popup-modal slider mfp-hide">
               <div class="media">
                 <img src="images/portfolio/modals/funmi tribute.mp4" alt="" />
@@ -320,9 +322,6 @@
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
-            <!-- /modal-06 -->
-
-
 
             <!-- modal popups - end
 	            ============================================================= -->
@@ -336,7 +335,7 @@
     </section>
     <!-- /portfolio -->
 
-    <!-- footer
+     <!-- footer
    ================================================== -->
 
     <footer>
@@ -344,29 +343,29 @@
         <div class="col-six tab-full pull-right social">
           <ul class="footer-social">
             <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="https://github.com/Rike12"
+                ><i class="fa fa-github"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-behance"></i></a>
+              <a href="https://www.twitter.com/mutiat900"
+                ><i class="fa fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/mutiat-adepoju-35b54a171"
+                ><i class="fa fa-linkedin"></i
+              ></a>
             </li>
           </ul>
         </div>
 
         <div class="col-six tab-full">
           <div class="copyright">
-            <span>© Copyright Kards 2016.</span>
+            <span>© HerTechTrail Cohort6 Capstone Project.</span>
             <span
               >Design by
-              <a href="http://www.styleshout.com/">styleshout</a></span
+              <a href="https://www.twitter.com/mutiat900">Mutiat</a></span
             >
           </div>
         </div>
