--- a/portfolio.html
+++ b/portfolio.html
@@ -302,10 +302,11 @@
             
                                 <!-- /modal-06 -->
             <div id="modal-06" class="popup-modal slider mfp-hide">
-              <div class="media">
-                <img src="images/portfolio/modals/funmi tribute.mp4" alt="" />
+              <div class="item-wrap">
+                <video class="w-100" autoplay loop muted>
+              <source src="images/funmi tribute.mp4" type="video/mp4" />
+                </video>
               </div>
-
               <div class="description-box">
                 <h4>Tribute page</h4>
                 <p>
