--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-          <img class="img-fluid" src="./uploads/Rose Gold Brush Glitter Feminine Boutique Circle Logo.png" alt="" width="50px">
+ <img class="logo" src="./images/mlogo.png alt=" width="50px">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
 		</a>
     
