--- a/portfolio.html
+++ b/portfolio.html
@@ -450,8 +450,7 @@
             <span>© HerTechTrail Cohort6 Capstone Project.</span>
             <span
               >Design by
-              <a href="https://www.twitter.com/mutiat900">Mutiat</a></span
-            >
+              <a href="https://www.github.com/Rike12">Mutiat Adepoju</a></span>
           </div>
         </div>
 
